# serializer version: 1
# name: test_3d_mode
  '''
  1
  00:00:00,000 --> 00:00:00,000
  F#: 00000 [KEYFRAME]; Seed: 0000000001; Steps: 25/25; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0;
  Prompt:  tiny cute swamp bunny, highly detailed, intricate, ultra hd, sharp photo, crepuscular rays, in focus --neg
  
  2
  00:00:00,000 --> 00:00:00,500
  F#: 00010 [KEYFRAME]; Seed: 0000000002; Steps: 5/25; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0;
  Prompt:  tiny cute swamp bunny, highly detailed, intricate, ultra hd, sharp photo, crepuscular rays, in focus --neg
  
  
  '''
# ---
# name: test_simple_settings
  '''
  1
  00:00:00,000 --> 00:00:00,000
  F#: 00000 [KEYFRAME]; Seed: 0000000001; Steps: 25/25; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0;
  Prompt:  tiny cute swamp bunny, highly detailed, intricate, ultra hd, sharp photo, crepuscular rays, in focus --neg
  
  2
  00:00:00,000 --> 00:00:00,500
  F#: 00010 [KEYFRAME]; Seed: 0000000002; Steps: 5/25; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0;
  Prompt:  tiny cute swamp bunny, highly detailed, intricate, ultra hd, sharp photo, crepuscular rays, in focus --neg
  
  
  '''
# ---
# name: test_with_parseq_inline_with_overrides
  '''
  1
  00:00:00,000 --> 00:00:00,000
  F#: 00000 [KEYFRAME]; Seed: 0000000055; Steps: 25/25; SubSeed: 0000000055; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0; SubSSch: 55; SubSStrSch: 0;
  Prompt: Parseq prompt! --neg neg parseq prompt!
  
  2
  00:00:00,000 --> 00:00:00,166
  F#: 00010 [KEYFRAME]; Seed: 0000000056; Steps: 5/25; SubSeed: 0000000056; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0; SubSSch: 56; SubSStrSch: 0;
  Prompt: Parseq prompt! --neg neg parseq prompt!
  
  
  '''
# ---
# name: test_with_parseq_inline_without_overrides
  '''
  1
  00:00:00,000 --> 00:00:00,000
  F#: 00000 [KEYFRAME]; Seed: 0000000055; Steps: 25/25; SubSeed: 0000000055; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0; SubSSch: 55; SubSStrSch: 0;
  Prompt: Parseq prompt! --neg neg parseq prompt!
  
  2
  00:00:00,000 --> 00:00:00,500
  F#: 00010 [KEYFRAME]; Seed: 0000000056; Steps: 5/25; SubSeed: 0000000056; TrX: 0; TrY: 0; TrZ: 0; RotX: 0; RotY: 0; RotZ: 0; SubSSch: 56; SubSStrSch: 0;
  Prompt: Parseq prompt! --neg neg parseq prompt!
  
  
  '''
# ---
